# mgp-py

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
