[project]
name = "mgp-py-workspace"
version = "0.0.0"
description = "uv workspace root for mgp-py (not published; each package under packages/* is published independently)."
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  # `pytest-asyncio` is required by Phase 2 Step 2-β tests
  # (test_embedding_cache / test_semantic_cache / test_search) which mark
  # async coroutines with `@pytest.mark.asyncio`. We keep the default
  # "strict" mode so only explicitly decorated tests run as async — sync
  # tests in earlier sub-phases stay untouched.
  "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mcp-common = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-ra"
asyncio_mode = "strict"
